# wiggle-sensors

./: README.md  pyproject.toml  requirements.txt
src/wiggle_bme680/: install.py  main.py
src/wiggle_bme680/service/: wiggle-bme680.service
src/wiggle_sensors/: __init__.py  accelerometer.py  environment.py  gate.py  hourly.py  main.py  soil_moisture.py  soil_temperature.py  write.py
