[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiggle_sensors"
version = "0.0.1"
authors = [
  { name="Studio Rabota" },
]
description = "WiggleSensors - Track sensor data like temperature, gas, pressure and humidity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'adafruit-circuitpython-bme680',
  'adafruit-circuitpython-adxl34x'
  'RPi.GPIO',
]

[project.scripts]
wiggle-bme680 = "wiggle_sensors.main:main"
wiggle-bme680-install = "wiggle_sensors.install:install"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-bme680.git"