[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiggle_sensors"
version = "0.0.1"
authors = [
  { name="Studio Rabota" },
]
description = "WiggleSensors - Track sensor data like temperature, gas, pressure and humidity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'adafruit-circuitpython-bme680',
  'adafruit-circuitpython-adxl34x',
  'adafruit-circuitpython-ads1x15',
  'gpiozero',
]

[project.scripts]
wiggle-sensors = "wiggle_sensors.main:main"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-sensors.git"